[gd_scene load_steps=2 format=3 uid="uid://dmbqghu30g52r"]

[ext_resource type="Script" path="res://cifradoCesar2.gd" id="1_qgy4r"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qgy4r")

[node name="Label" type="Label" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 251.0
offset_top = 45.0
offset_right = 899.0
offset_bottom = 185.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 100
text = "Cifrado Cesar"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 487.0
offset_right = 756.0
offset_bottom = 536.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Cifrar"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Decifrar
"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 149.0
offset_top = 196.0
offset_right = 1038.0
offset_bottom = 421.0
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "Texto a cifrar o decifrar"

[node name="TextEdit2" type="TextEdit" parent="HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
placeholder_text = "Resultado"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 10.0
offset_right = 138.0
offset_bottom = 41.0
text = "Regresar"

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
